@@ -1,7 +1,11 @@
 2009-07-13  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* statistics.tcl: Implement more robust computation of basic statistics
-	* statistics.test: Added testfor this more robust computation
-	* pkgIndex.tcl: Version of statistics package increased to 0.6.1
+	      Fixes bug 2812832; simplified the code (as indicated by akupries)
+	* statistics.test: Added test for this more robust computation
+	* linalg.tcl: Corrected dim and shape procedures for scalars (version now 1.1.3;
+	      Fixes bug 2818958
+	* linalg.test: Corrected result of dim and shape procedures for scalars
+	* pkgIndex.tcl: Updated version numbers
 
 2009-03-20  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* linalg.tcl: Solving bugs with test matrices (bugs #2695513, 2695564, 2695618)
